--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@ flask-server/venv/Lib/site-packages/torch/lib/torch_cpu.dll filter=lfs diff=lfs 
 flask-server/venv/Library/bin/mkl_core.1.dll filter=lfs diff=lfs merge=lfs -text
 flask-server/venv/Lib/site-packages/cv2/cv2.pyd filter=lfs diff=lfs merge=lfs -text
 flask-server/venv/Library/bin/mkl_avx512.1.dll filter=lfs diff=lfs merge=lfs -text
+flask-server/venv/Library/bin/mkl_intel_thread.1.dll filter=lfs diff=lfs merge=lfs -text
+flask-server/venv/Library/bin/mkl_pgi_thread.1.dll filter=lfs diff=lfs merge=lfs -text
+flask-server/venv/Lib/site-packages/face_recognition_models/models/shape_predictor_68_face_landmarks.dat filter=lfs diff=lfs merge=lfs -text
